--- a/The_first_daily_test.ipynb
+++ b/The_first_daily_test.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2.Define two variables and calculate their sum."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.Define a list and replicate in three different ways."
+    "# 2.Define two variables and calculate their sum."
    ]
   },
   {
@@ -44,30 +37,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "x=1\n",
-    "y=3\n",
-    "\n",
-    "def sum(a,b):\n",
-    "    return a+b\n",
-    "sum(x,y)"
+    "a, b = 1, 2\n",
+    "print(str(a+b))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.Define two lists and merge them together."
+    "# 3.Define a list and replicate in three different ways."
    ]
   },
   {
@@ -79,35 +65,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['I', 'Love', 'Coding', 'and', 'want', 'to', 'learn', 'Python', '!']\n",
-      "['I', 'Love', 'Coding', 'and', 'want', 'to', 'learn', 'Python', '!']\n",
-      "['I', 'Love', 'Coding', 'and', 'want', 'to', 'learn', 'Python', '!']\n",
-      "['I', 'Love', 'Coding', 'and', 'want', 'to', 'learn', 'Python', '!']\n"
+      "first way: [1, 2, 3] \n",
+      "second way: [1, 2, 3] \n",
+      "third way: [1, 2, 3]\n"
      ]
     }
    ],
    "source": [
-    "items=[\"I\",\"Love\",\"Coding\",\"and\",\"want\",\"to\",\"learn\",\"Python\",\"!\"]\n",
-    "\n",
-    "#Method one:\n",
-    "print(items[:])\n",
-    "print(items)\n",
-    "\n",
-    "#Method two:\n",
-    "new_list = list(items)\n",
-    "print(new_list)\n",
-    "\n",
-    "#Method three:\n",
-    "import copy\n",
-    "the_newest_list = copy.copy(items)# copy\n",
-    "print(the_newest_list)"
+    "listone = [1, 2, 3]\n",
+    "print(f\"first way: {listone} \\nsecond way: {list(listone)} \\nthird way: {listone[:]}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Get the last element of the list and print it."
+    "# 4.Define two lists and merge them together."
    ]
   },
   {
@@ -119,19 +92,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['I', 'Love', 'Coding']\n",
-      "['and', 'want', 'to', 'learn', 'Python', '!']\n",
-      "['I', 'Love', 'Coding', 'and', 'want', 'to', 'learn', 'Python', '!']\n"
+      "[1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
-    "listone = [\"I\",\"Love\",\"Coding\"]\n",
-    "listtwo = [\"and\",\"want\",\"to\",\"learn\",\"Python\",\"!\"]\n",
-    "print(listone)\n",
-    "print(listtwo)\n",
+    "listone = [1, 2]\n",
+    "listtwo = [3, 4]\n",
     "listone.extend(listtwo)\n",
     "print(listone)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Get the last element of the list and print it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "listone = [1, 2, 3, 4]\n",
+    "print(listone[-1])"
    ]
   },
   {
@@ -143,52 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'!'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "items=[\"I\",\"Love\",\"Coding\",\"and\",\"want\",\"to\",\"learn\",\"Python\",\"!\"]\n",
-    "items[len(items)-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1,)\n"
+      "s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "t=(1,)\n",
-    "print(t)\n",
-    "type(t)"
+    "a = ('s')\n",
+    "print(a)"
    ]
   },
   {
@@ -200,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,17 +170,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\"this is a long string\" \n",
-      " ,he said. \n",
-      " nice\n",
+      "really\n",
+      "long\n",
+      "string\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print('''\n",
-    "\"this is a long string\",\\n he said. \\n nice\n",
-    "''')"
+    "long_string = '''\n",
+    "really\n",
+    "long\n",
+    "string\n",
+    "'''\n",
+    "print(long_string)"
    ]
   },
   {
@@ -230,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -239,15 +204,14 @@
      "text": [
       "1\n",
       "2\n",
-      "coding\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "t=(1,2,\"coding\")\n",
-    "i=0\n",
-    "for i in t[0:len(t)]:\n",
-    "    print(i)"
+    "items = (1, 2, 3)\n",
+    "for item in items:\n",
+    "    print(item)"
    ]
   },
   {
@@ -259,27 +223,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "48"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
     }
    ],
    "source": [
-    "x=8\n",
-    "y=6\n",
+    "def Mul(num1, num2):\n",
+    "    answer = num1 * num2\n",
+    "    return answer\n",
     "\n",
-    "def Mul(a,b):\n",
-    "    return a*b\n",
-    "Mul(x,y)"
+    "print(Mul(8, 6))"
    ]
   },
   {
@@ -291,29 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
     }
    ],
    "source": [
-    "import math \n",
     "import numpy as np\n",
-    "\n",
-    "np.zeros((5,5))"
+    "matrixone = np.zeros((5,5))\n",
+    "print(matrixone)"
    ]
   },
   {
@@ -325,25 +281,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0.]]\n"
+     ]
     }
    ],
    "source": [
-    "np.zeros((4,6))"
+    "matrixone = np.zeros((4,6))\n",
+    "print(matrixone)"
    ]
   },
   {
@@ -355,26 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 5)\n"
+     ]
     }
    ],
    "source": [
-    "x=np.zeros((15,))\n",
-    "x = x.reshape(3,5)\n",
-    "x"
+    "mat=np.arange(15,)\n",
+    "mat.shape=(3,5)\n",
+    "print(mat.shape)"
    ]
   },
   {
@@ -386,85 +335,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.arange(6).reshape(3,2)\n",
-    "B = np.arange(6).reshape(2,3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0, 1],\n",
-       "       [2, 3],\n",
-       "       [4, 5]])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 20  23  26  29]\n",
+      " [ 56  68  80  92]\n",
+      " [ 92 113 134 155]\n",
+      " [128 158 188 218]]\n"
+     ]
     }
    ],
    "source": [
-    "A"
+    "A = np.arange(12).reshape(4,3)\n",
+    "B = np.arange(12).reshape(3,4)\n",
+    "result = np.matmul(A, B)\n",
+    "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 2],\n",
-       "       [3, 4, 5]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 3,  4,  5],\n",
-       "       [ 9, 14, 19],\n",
-       "       [15, 24, 33]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.matmul(A,B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -483,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
